--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,19 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="icon" href="Best-Buy-white.png">
+    <title>BestBuy</title>
   </head>
   <body>
+    <style>
+      body 
+      {
+        background-image: url('BestBuy-Background1.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: absolute;
+      }
+    </style>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
@@ -15,3 +24,4 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
